@@ -1,7 +1,8 @@
 0.9.0 (September ??, 2023)
 - Removed a txt exclusion. Ebookmaker is now putting headers on txt files, but this was not being done for the 20,000 or so books with source named 99999-0.txt due to the obsolete exclusion. 
 - add a script that packages txt files to a tarball
-- add an HTMLWriter that extends Ebookmaker's HTMLWriter to package up a zip file of the html5 with images named pg99999-h.zip 
+- add an HTMLWriter that extends Ebookmaker's HTMLWriter to package up a zip file of the html5 with images named pg99999-h.zip Addresses #38
+- don't require a sourcefile for products that are built from the database. Require ebbokmaker>0.12.35. Fixes #39.
 
 0.8.6 (May 31, 2023)
 - adds MastodonWriter, to replicate TwitterWriter (posting on @gutenberg_new@mastodon.social)
